# sward

./: .gitignore  CHANGELOG.md  README.md  REPO_PUBLISHING_SCOPE.md
UnleashedRecomp/: CMakeLists.txt  main.cpp
docs/: BUILDING.md  DUMPING-en.md
flatpak/: README.md
research_uiux/: BOSS_RESULT_SAVE_LOAD_DEEP_DIVE.md  BOSS_RESULT_SAVE_VISUAL_TAXONOMY.md  BROADER_SOURCE_PATH_EXPANSION_PHASE47.md  BROADER_UI_ARCHIVE_EXTRACTION.md  CODE_BACKED_RUNTIME_IMPLEMENTATION.md  CODE_TO_LAYOUT_CORRELATION.md  COMMON_FLOW_ARCHIVE_CANDIDATES.md  COMMON_FLOW_LOCALIZATION_EXTRACTION.md  CSD_MATERIAL_CHANNEL_ALIGNMENT.md  CSD_UI_LAYER_AWARE_DIFF.md  (+86 more)
research_uiux/runtime_reference/: CMakeLists.txt  README.md
research_uiux/runtime_reference/contracts/: README.md  achievement_unlock_support_reference.json  application_world_shell_reference.json  audio_cue_support_reference.json  autosave_toast_reference.json  boss_hud_reference.json  camera_shell_reference.json  extra_stage_hud_reference.json  frontend_sequence_shell_reference.json  loading_transition_reference.json  mission_result_reference.json  pause_menu_reference.json  sonic_stage_hud_reference.json  subtitle_cutscene_reference.json  super_sonic_hud_reference.json  title_menu_reference.json  town_ui_reference.json  werehog_stage_hud_reference.json  world_map_reference.json  xml_data_loading_support_reference.json
research_uiux/runtime_reference/csharp_reference/: ContractLoader.cs  Program.cs  README.md  ReferenceProfiles.cs  ScreenRuntime.cs  Sward.UiRuntime.Reference.csproj
research_uiux/runtime_reference/examples/: c_pause_menu_example.c  frontend_screen_controller_catalog.cpp  frontend_screen_reference_catalog.cpp  pause_menu_example.cpp  sgfx_template_catalog.cpp  sonic_hud_reference_catalog.cpp  su_ui_asset_renderer.cpp  test_sgfx_template_catalog.py  test_su_ui_asset_renderer.py  test_ui_debug_workbench_catalog.py  test_ui_debug_workbench_gui.py  test_unleashed_recomp_ui_lab_contract.py  title_menu_example.cpp  toast_overlay_example.cpp  ui_debug_selector.cpp  ui_debug_workbench.cpp  ui_debug_workbench_gui.cpp
research_uiux/runtime_reference/ghidra_scripts/: SwardExportFunctionContext.java
research_uiux/runtime_reference/include/sward/ui_runtime/: contract_loader.hpp  debug_workbench_data.hpp  frontend_screen_controllers.hpp  frontend_screen_reference.hpp  profiles.hpp  runtime.hpp  runtime_c.h  sgfx_templates.hpp  sonic_hud_reference.hpp  source_family_selector_data.hpp
research_uiux/runtime_reference/src/: contract_loader.cpp  frontend_screen_controllers.cpp  frontend_screen_reference.cpp  profiles.cpp  runtime.cpp  runtime_c.cpp  sgfx_templates.cpp  sonic_hud_reference.cpp
research_uiux/runtime_reference/tools/: build_unleashed_recomp_ui_lab.ps1  capture_unleashed_recomp_ui_lab.ps1  export_unleashed_recomp_ghidra_context.ps1  inventory_sonic_unleashed_preview_build.ps1  launch_unleashed_recomp_ui_lab_manual.ps1  query_unleashed_recomp_ui_lab_bridge.ps1  summarize_sonic_unleashed_cheat_table.ps1  summarize_sonic_unleashed_preview_select_stage.ps1  summarize_unleashed_recomp_ui_lab_hud_values.ps1
(+62 files in other folders)
